-Added primary and secondary colors to LangManager